--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,9 +1,8 @@
 {
 	"manifest_version": 1,
-	"app_min_version": "1.4",
-	"name": "Link to note",
-	"description": "Links to the note with a title corresponding to the selected text. Creates it if it does not exist.",
-	"version": "0.1",
+	"name": "autolinker",
+	"description": "Makes the selection into a link",
+	"version": "1.0.0",
 	"author": "S73ph4n",
-	"homepage_url": "https://github.com/S73ph4n"
+	"homepage_url": ""
 }
